--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>How's the weather like in:</h1>
-    <form id="sampleform">
+    <form id="get_location">
         <div>
             <input type="text" class="search" id="search_bar" name="q" placeholder="Enter a city name i.e. Singapore">   
         </div>
@@ -19,13 +19,9 @@
         
     </form>
 
-
-    
-
     <section>
-        <p>The Weather is <div id="weather"></div><div id="city"></div></p>
+        <p><span id="weather"></span> in <span id="city"></span> right now</p>
     </section>
-
 
     <script src="scripts/main.js"></script>
 </body>
