replace eventListener in main.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>How's the weather like in:</h1>
-    <form id="get_location">
+    <form id="get_location" onsubmit="returnSearchResult()">
         <div>
             <input type="text" class="search" id="search_bar" name="q" placeholder="Enter a city name i.e. Singapore">   
         </div>
