--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <h1>How's the weather like in:</h1>
-    <form id="get_location" onsubmit="returnSearchResult()">
+    <form id="get_location" onsubmit="returnSearchResult(); return false">
         <div>
-            <input type="text" class="search" id="search_bar" name="q" placeholder="Enter a city name i.e. Singapore">   
+            <input type="text" class="search" id="search_bar" name="q" placeholder="Enter a city name i.e. Singapore" onsubmit="returnSearchResult()">   
         </div>
         <div>
             <input type="submit" id="submit" value="Let's Go!">
