Refactor index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </form>
 
     <section>
-        <p><span id="weather"></span> in <span id="city"></span> right now</p>
+        <p id="search_result"></p>
     </section>
 
     <script src="scripts/main.js"></script>
