Remove unecessary divs from index.html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
 <body>
     <h1>How's the weather like in:</h1>
     <form id="get_location" onsubmit="returnSearchResult(); return false">
-        <div>
-            <input type="text" class="search" id="search_bar" name="q" placeholder="Enter a city name i.e. Singapore" onsubmit="returnSearchResult()">   
-        </div>
-        <div>
-            <input type="submit" id="submit" value="Let's Go!">
-        </div>
+        <input type="text" class="search" id="search_bar" name="q" placeholder="Enter a location i.e. Cuba" onsubmit="returnSearchResult()">
+        <input type="submit" id="submit" value="Let's Go!">
     </form>
 
     <section>
