Change search button from text to icon

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <h1>How's the weather like in:</h1>
+    <h2>How's the weather?</h2>
     <form id="get_location" onsubmit="returnSearchResult(); return false">
-        <input type="text" class="search" id="search_bar" name="q" placeholder="Enter a location i.e. Cuba" onsubmit="returnSearchResult()">
-        <input type="submit" id="submit" value="Let's Go!">
+        <input type="text" class="search" id="search_bar" name="q" placeholder="location" onsubmit="returnSearchResult()">
+        <input type="image" id="submit" src="images/search.png">
     </form>
 
-    <section>
+    <section class="search_result">
         <p id="search_result"></p>
     </section>
 
