Cosmetic changes to search result

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
     <title>Where Rain?</title>
 </head>
@@ -15,7 +16,10 @@
     </form>
 
     <section class="search_result">
-        <p id="search_result"></p>
+        <h1 id="location"></h1>
+        <p id="temperature"></p>
+        <img id="weather_icon">
+        <p id="forecast"></p>
     </section>
 
     <script src="scripts/main.js"></script>
