Add styling for error messages

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p id="temperature"></p>
         <img id="weather_icon">
         <p id="forecast"></p>
+        <p id="error_message"></p>
     </section>
 
     <script src="scripts/main.js"></script>
