Reformat search results and refactor switch case in main.js

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
     </form>
 
     <section class="search_result">
-        <h1 id="location"></h1>
-        <p id="temperature"></p>
-        <img id="weather_icon">
-        <p id="forecast"></p>
+        <div class="icon_display">
+            <img id="weather_icon">
+        </div>
+        <div class="text_display">
+            <h1 id="location"></h1>
+            <div class="forecast_display">
+                <p id="temperature"></p>
+                <p id="forecast"></p>
+            </div>    
+        </div>
         <p id="error_message"></p>
     </section>
 
