Change desktop ui layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <section class="search_result">
         <h1 id="location"></h1>
-        <p id="temperature"></p>  
+        <p id="location_name"></p>
+        <p id="temperature"></p>
+        <p id="feels_like"></p>
         <img id="weather_icon">
         <p id="forecast"></p>
         <p id="error_message"></p>
