Clean up mobile ui

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </form>
 
     <section class="search_result">
-        <h1 id="location"></h1>
-        <p id="location_name"></p>
+        <h1 id="country"></h1>
+        <p id="location"></p>
         <p id="temperature"></p>
         <p id="feels_like"></p>
         <img id="weather_icon">
